<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDescription">



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="304dp"
        android:layout_height="470dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:padding="16dp"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806">

        <ImageView
            android:id="@+id/list_item_image"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginVertical="5dp"
            android:background="@color/white"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/food_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/list_item_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:text="@string/product_name"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <TextView
            android:id="@+id/list_item_price"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:text="@string/_0_00"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/list_item_button"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:paddingBottom="8dp"
            android:text="@string/buy"
            android:translationX="5dp" />

        <TextView
            android:id="@+id/list_item_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:text="@string/company"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:translationX="5dp" />

        <TextView
            android:id="@+id/list_item_description"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:translationX="5dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>