<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/spacer"
    android:layout_marginTop="100dp"
    android:background="#FFFFFF"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:padding="3dp"
    android:scrollbarAlwaysDrawVerticalTrack="false">

    <LinearLayout
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/list_item_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/company_cart"
            android:textColor="@android:color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/list_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:maxWidth="180dp"
            android:maxLines="2"
            android:paddingStart="8dp"
            android:text="@string/product_name_cart"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/list_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:maxLines="1"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:text="@string/_0_00_cart"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="16sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/list_item_button_remove"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:background="@drawable/trashcan"
            android:backgroundTint="#DE2B2B"
            android:gravity="center|end" />
    </LinearLayout>

</LinearLayout>
